cambio en el repo local

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
             <td>Fila 2, Col 1</td>
-            <td>Fila 2, Col 2</td>
+            <td><img src="C:\tema3 CLONE\tema3\imgs\codigo" alt=""></td>
             <td>Fila 2, Col 3</td>
         </tr>
         <tr>
