--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </tr>
         <tr>
             <td>Fila 2, Col 1</td>
-            <td><img src="C:\tema3 CLONE\tema3\imgs\codigo" alt=""></td>
+            <td><img src="imgs\codigo.png" width="40" height="40"></td>
             <td>Fila 2, Col 3</td>
         </tr>
         <tr>
-            <td>Fila 3, Col 1</td>
+            <td><img src="imgs/instagram.png" width="40" height="40"></td>
             <td>Fila 3, Col 2</td>
             <td>Fila 3, Col 3</td>
         </tr>
