--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <tr>
             <td>Fila 1, Col 1</td>
             <td>Fila 1, Col 2</td>
-            <td>Fila 1, Col 3</td>
+            <td><img src="imgs\facebook.png" width="40" height="40"> </td>
         </tr>
         <tr>
             <td>Fila 2, Col 1</td>
